<resources>
    <string name="app_name" translatable="false">Capacity Info</string>
    <string name="design_capacity">Design Capacity: %1$s mAh</string>
    <string name="residual_capacity">Residual Capacity: %1$s mAh (%2$s)</string>
    <string name="current_capacity">Current Capacity: %1$s mAh</string>
    <string name="battery_wear">Battery Wear: %1$s (%2$s mAh)</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="charge_current">Charging current: %1$s mA</string>
    <string name="discharge_current">Discharge current: %1$s mA</string>
    <string name="voltage">Voltage: %1$s mV</string>
    <string name="temperature">Temperature: %1$s°C/%2$s°F</string>
    <string name="settings">Settings</string>
    <string name="instruction">Instruction</string>
    <string name="change_design_capacity">Change Design Capacity</string>
    <string name="change">Change</string>
    <string name="information">Information</string>
    <string name="battery_technology">Battery Technology: %1$s</string>
    <string name="instruction_message" formatted="false">1.In order for the application to show the residual capacity, discharge the battery to 10% or lower and put the device on charge, while the service must be turned on.\n2.For a more accurate display of the remaining capacity, charge the device fully until \"Status: Charged\" is displayed at least 5 times.\n3.If charging occurs after reaching 100%, then this is normal. Modern devices continue to charge for some time after reaching 100%.\n4.If the design capacity is incorrect, change it in the application settings.\n5.If the current capacity and/or charge/discharge current and/or voltage is not displayed correctly, then change the unit in the application settings.\n\n</string>
    <string name="instruction_message_do_not_kill_the_service">ATTENTION! Do not kill the service. If the shell of your device likes to \"kill\" applications, or completely \"kills\" applications when cleaning the most recently launched applications or when removing an application from the most recently launched applications, or you use power saving, add this application to all possible exceptions. If your firmware has an application startup setting, be sure to ensure that this application can start after loading the OS, if you want the application to start automatically after loading the OS.&#160;</string>
    <string name="instruction_message_dont_kill_my_app">If you don’t know what and where to configure so that the application is not \"killed\" by the system, use the \"Don\'t kill my app!\" Service by choosing the manufacturer of your device.\n\n</string>
    <string name="huawei_honor_information">ATTENTION! On Huawei &amp; Honor, the current capacity may not display correctly. Unfortunately nothing can be done about it</string>
    <string name="status">Status: %1$s</string>
    <string name="source_of_power">Source of Power: %1$s</string>
    <string name="discharging">Discharging</string>
    <string name="not_charging">Not Charging</string>
    <string name="charging">Charging</string>
    <string name="full">Charged</string>
    <string name="unknown">Unknown</string>
    <string name="source_of_power_ac">AC</string>
    <string name="source_of_power_usb" translatable="false">USB</string>
    <string name="source_of_power_wireless">Wireless</string>
    <string name="battery_level">Battery Level: %1$s</string>
    <string name="last_charge_time">Last Charge Time: %1$s (%2$s - %3$s)</string>
    <string name="service">Service</string>
    <string name="charging_time">Charging Time: %1$s</string>
    <string name="apply">Apply</string>
    <string name="service_and_notification">Service &amp; Notification</string>
    <string name="appearance">Appearance</string>
    <string name="misc">Misc</string>
    <string name="service_time">Service Time</string>
    <string name="capacity_added">Capacity Added: %1$s mAh (%2$s)</string>
    <string name="notification_priority">Notification Priority and Status Bar Icon</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="build_date">Build Date (GMT+2)</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="license">License: Apache 2.0</string>
    <string name="feedback">Feedback</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="email_copied">E-mail copied</string>
    <string name="auto_dark_mode_summary">Turn on dark mode depending on the system</string>
    <string name="number_of_charges">Number of Charges: %1$d</string>
    <string name="debug">Debug</string>
    <string name="change_setting">Change Setting</string>
    <string name="pref_key">Key</string>
    <string name="pref_value">Value</string>
    <string name="success_change_key">Setting \"%1$s\" Successfully Changed</string>
    <string name="error_changing_key">Error changing setting \"%1$s\"!\n%2$s</string>
    <string name="reset_setting">Reset Setting</string>
    <string name="reset">Reset</string>
    <string name="key_successfully_reset">Setting \"%1$s\" Successfully Reset</string>
    <string name="reset_settings">Reset All Settings</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="settings_reset_successfully">Settings reset successfully</string>
    <string name="forcibly_show_rate_the_app">Forcibly Show \"Rate the app\"</string>
    <string name="export_settings">Export Settings</string>
    <string name="successful_export_of_settings">Settings have been exported successfully!\n\nFile Name: \"%1$s\"</string>
    <string name="error_exporting_settings">Error Exporting Settings!\n%1$s</string>
    <string name="about_and_feedback">About &amp; Feedback</string>
    <string name="import_settings">Import Settings</string>
    <string name="settings_imported_successfully">Settings were imported successfully!</string>
    <string name="error_importing_settings">Error importing settings!\n%1$s</string>
    <string name="share_the_app">Share The App</string>
    <string name="more">More&#8230;</string>
    <string name="hide">Hide</string>
    <string name="change_design_summary">%1$d mAh</string>
    <string name="unit_of_charge_discharge_current">Unit of Charge/Discharge Current</string>
    <string name="unit_of_measurement_of_current_capacity">Unit of measurement of current capacity</string>
    <string name="voltage_unit">Voltage Unit</string>
    <string name="faq" translatable="false">FAQ</string>
    <string name="faq_how_does_the_app_work" formatted="false">Question: How does the app work?\nAnswer: Residual capacity is formed on the basis of the current capacity upon reaching 100% and the status of \"Charged\" (up to the last 5 charges). The current capacity is taken from the kernel of the OS, by the Android API itself, which allows you to get the current capacity without root rights. The kernel takes the current capacity from the battery itself and writes it to the \"charge_counter\" file (file path: /sys/class/power_supply/battery). On how accurate the current capacity depends on the battery and the kernel itself.\n\n</string>
    <string name="faq_capacity_added">Question: What is considered to be \"Capacity Added\"?\nAnswer: \"Capacity Added\" is considered very simple: the current capacity - capacity, which was before you connected the charging.\n\n</string>
    <string name="faq_where_does_the_app_get_the_ccl">Question: Where does the application get the \"Charging Current Limit\"?\nAnswer: The application takes the \"Charging Current Limit\" from the kernel file \"constant_charge_current_max\" along the path /sys/class/power_supply/battery.\n\n</string>
    <string name="faq_why_is_ccl_not_displayed">Question: Why is \"Charging Current Limit\" not displayed?\nAnswer: The display \"Charging Current Limit\" depends on whether the file \"constant_charge_current_max\" is readable or not. Not all kernels allow \"reading\" this file, and also not all kernels have this file.\n\n</string>
    <string name="faq_i_have_everything_in_zeros" formatted="false">Question: I have everything (or almost everything) in zeros. Why?\nAnswer: Because the manufacturer of your device has saved on various sensors.  And since the kernel cannot get the value, it returns 0.\n\n</string>
    <string name="faq_units">Question: Very large or small numbers are shown in the current capacity, charge/discharge current, voltage.\nAnswer: Go to the settings, in the \"Misc\" section, expand all the settings and change the unit of measurement.\n\n</string>
    <string name="faq_current_capacity">Question: The current capacity has ceased to be displayed, although it was previously displayed (or is displayed, but not always).\nAnswer: This means that the battery is coming or has already come to an end. If everything is in order with the battery, then the firmware kernel or the controller, which gives the current capacity, may be buggy.\n\n</string>
    <string name="become_a_beta_tester">Become a beta tester</string>
    <string name="become_a_beta_tester_summary">Be the first to receive updates</string>
    <string name="tips_menu">Tips</string>
    <string name="number_of_cycles">Number of Cycles: %1$s</string>
    <string name="overlay">Overlay</string>
    <string name="enable_overlay">Enable Overlay</string>
    <string name="size">Size</string>
    <string name="opacity">Opacity</string>
    <string name="battery_level_overlay">Battery Level</string>
    <string name="number_of_charges_overlay">Number of Charges</string>
    <string name="number_of_cycles_overlay">Number of Cycles</string>
    <string name="charging_time_overlay">Charging Time</string>
    <string name="current_capacity_overlay">Current Capacity</string>
    <string name="capacity_added_overlay">Capacity Added</string>
    <string name="residual_capacity_overlay">Residual Capacity</string>
    <string name="status_overlay">Status</string>
    <string name="source_of_power_overlay">Source of Power</string>
    <string name="charge_discharge_current_overlay">Charge/Discharge Current</string>
    <string name="max_charge_discharge_current_overlay">Maximum Charge/Discharge Current</string>
    <string name="average_charge_discharge_current_overlay">Average Charge/Discharge Current</string>
    <string name="min_charge_discharge_current_overlay">Minimum Charge/Discharge Current</string>
    <string name="temperature_overlay">Temperature</string>
    <string name="voltage_overlay">Voltage</string>
    <string name="battery_is_fully_charged">Battery is fully charged</string>
    <string name="battery_is_charged">Battery is charged</string>
    <string name="battery_is_discharged">Battery is discharged</string>
    <string name="battery_level_charge_discharge">Battery Level</string>
    <string name="discharge">Discharge</string>
    <string name="wear">Wear</string>
    <string name="bypass_dnd_mode">Bypass DND Mode</string>
    <string name="bypass_dnd_mode_summary">Use alarms</string>
    <string name="overheat_overcool">Overheat/Overcool</string>
    <string name="other">Other</string>
    <string name="overheat">Overheat</string>
    <string name="overcool">Overcool</string>
    <string name="export_history">Export History</string>
    <string name="export_notification_sounds">Export Notification Sounds</string>
    <string name="import_history">Import History</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="full_charge_reminder">Full Charge Reminder</string>
    <string name="full_charge_reminder_frequency">Full Charge Reminder Frequency</string>
    <string name="battery_health_overlay">Battery Health</string>
    <string name="order_id">Order ID</string>
</resources>