<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
            app:title="@string/developer"
            app:summary="Ph03niX-X"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_developer_24dp"
            android:key="developer"/>

    <Preference
            app:title="@string/version"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_version"
            android:key="version"/>

    <Preference
            app:title="@string/build"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_build_24dp"
            android:key="build"/>

    <Preference
            app:title="@string/build_date"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_build_date_24dp"
            android:key="build_date"/>

    <Preference
            app:title="@string/github"
            app:summary="@string/license"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_github"
            android:key="github"/>

    <Preference
            app:title="@string/belarusian_translation"
            app:summary="Dr.Cyanogen"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_belarus"
            android:key="belarusian_translation"/>

    <Preference
        app:title="@string/ukrainian_translation"
        app:summary="Erdar2K22"
        app:singleLineTitle="false"
        app:icon="@drawable/ic_ukrainian_translation"
        android:key="ukrainian_translation"/>

    <Preference
            app:title="@string/become_a_beta_tester"
            app:summary="@string/become_a_beta_tester_summary"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_beta"
            app:key="become_a_beta_tester"/>

    <Preference
        android:title="@string/order_id"
        app:singleLineTitle="false"
        app:icon="@drawable/ic_premium_24"
        android:key="order_id"/>

</PreferenceScreen>