<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:key="overlay_screen">

    <SwitchPreferenceCompat
            android:title="@string/enable_overlay"
            android:defaultValue="false"
            app:singleLineTitle="false"
            app:iconSpaceReserved="false"
            android:key="is_enabled_overlay"/>

    <PreferenceCategory
            app:title="@string/appearance"
            app:singleLineTitle="false"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            android:key="appearance_overlay">

    <ListPreference
            android:title="@string/size"
            app:singleLineTitle="false"
            android:entries="@array/overlay_size_list"
            android:entryValues="@array/overlay_size_values"
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            android:key="overlay_size"/>

        <Preference
                android:title="@string/opacity"
                app:singleLineTitle="false"
                app:iconSpaceReserved="false"
                android:key="overlay_opacity"/>

    </PreferenceCategory>

    <PreferenceCategory
            android:key="overlay_category"
            app:allowDividerAbove="false"
            app:allowDividerBelow="false"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="false"
            app:title="@string/overlay">

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_battery_level_overlay"
                android:title="@string/battery_level_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_number_of_charges_overlay"
                android:title="@string/number_of_charges_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_number_of_cycles_overlay"
                android:title="@string/number_of_cycles_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_charging_time_overlay"
                android:title="@string/charging_time_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_current_capacity_overlay"
                android:title="@string/current_capacity_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_capacity_added_overlay"
                android:title="@string/capacity_added_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_battery_health_overlay"
                android:title="@string/battery_health_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_residual_capacity_overlay"
                android:title="@string/residual_capacity_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_status_overlay"
                android:title="@string/status_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_plugged_overlay"
                android:title="@string/source_of_power_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_charge_discharge_current_overlay"
                android:title="@string/charge_discharge_current_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_max_charge_discharge_current_overlay"
                android:title="@string/max_charge_discharge_current_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_average_charge_discharge_current_overlay"
                android:title="@string/average_charge_discharge_current_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_min_charge_discharge_current_overlay"
                android:title="@string/min_charge_discharge_current_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_temperature_overlay"
                android:title="@string/temperature_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

        <SwitchPreferenceCompat
                android:defaultValue="false"
                android:key="is_voltage_overlay"
                android:title="@string/voltage_overlay"
                app:iconSpaceReserved="false"
                app:singleLineTitle="false"/>

    </PreferenceCategory>

</PreferenceScreen>