<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        android:title="@string/telegram"
        app:singleLineTitle="false"
        app:icon="@drawable/ic_telegram"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

    <Preference
            app:title="@string/developer"
            app:summary="\@Ph03niX_X"
            app:icon="@drawable/ic_developer_24dp"
            app:singleLineTitle="false"
            android:key="telegram_developer"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other"
        app:singleLineTitle="false"
        app:icon="@drawable/ic_misc_24dp"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false">

    <Preference
            app:title="@string/email"
            app:summary="Ph03niX-X@outlook.com"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_email_24dp"
            android:key="email"/>

    <Preference
            app:title="@string/rate_the_app"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_rate_the_app_24dp"
            android:key="rate_the_app"/>

    <Preference
            app:title="@string/share_the_app"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_share_24dp"
            android:key="share_the_app"/>

    </PreferenceCategory>

</PreferenceScreen>